# noah

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  build-windows.ps1  dev  package.json  release.ps1  release.sh
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/playbooks/: TEMPLATE.md  app-doctor.md  disk-space-recovery.md  network-diagnostics.md  outlook-troubleshooting.md  performance-forensics.md  printer-repair.md  setup-backup.md  setup-email-account.md  setup-homebrew.md  setup-ssh-key.md  setup-wifi-profile.md  update-troubleshooting.md  vpn-troubleshooting.md  windows-printer-repair.md  windows-update-troubleshooting.md
apps/desktop/src-tauri/src/: artifacts.rs  debug_runner.rs  knowledge.rs  lib.rs  machine_context.rs  main.rs  playbooks.rs  system_snapshot.rs  ui_tools.rs
apps/desktop/src-tauri/tests/: parse_real_sessions.rs  test_playbooks.sh  ui_tools_integration.rs
apps/desktop/src/components/: ActionApproval.tsx  ChangeLog.tsx  ChatPanel.tsx  DebugPanel.tsx  NoahIcon.tsx  (+9 more)
crates/noah-debug-runner/: Cargo.toml
crates/noah-debug-runner/src/: main.rs
crates/noah-tools/: Cargo.toml
crates/noah-tools/src/: lib.rs  tool.rs  types.rs
docs/: code-review-report.md  next-gen-ui-plan.md
scripts/: generate-playbook-art-prompts.mjs  playbook-art-prompts.json  release.mjs  setup-linux.sh
tests/: playbook-testing-guide.md
(+51 files in other folders)
