[package]
name = "noah-debug-runner"
version = "0.14.0"
edition = "2021"
description = "Headless backend prompt runner for end-to-end testing"

[[bin]]
name = "noah-backend-prompt"
path = "src/main.rs"

[dependencies]
noah-desktop-lib = { path = "../../apps/desktop/src-tauri", package = "noah-desktop" }
tokio = { version = "1", features = ["full"] }
